Fixes color of DatePicker triangle in dark mode

--- a/src/components/DatePicker/_DatePicker.scss
+++ b/src/components/DatePicker/_DatePicker.scss
@@ -118,6 +118,7 @@
       border-bottom-color: var(--nypl-colors-ui-border-default) !important;
     }
     &::after {
+      border-top-color: var(--nypl-colors-dark-ui-bg-hover) !important;
       border-bottom-color: var(--nypl-colors-dark-ui-bg-hover) !important;
     }
   }
